base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: course-app-service
  labels:
    app: course-app
spec:
  type: ClusterIP
  selector:
    app: course-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
